export const snapshot = {};

snapshot[`get single row 1`] = `
{
  data: {
    request_id: "",
    row: {
      Address: "11120 Jasper Ave NW",
      BirthDate: "1962-02-18 00:00:00",
      City: "Edmonton",
      Country: "Canada",
      Email: "andrew@chinookcorp.com",
      EmployeeId: 1,
      Fax: "+1 (780) 428-3457",
      FirstName: "Andrew",
      HireDate: "2002-08-14 00:00:00",
      LastName: "Adams",
      Phone: "+1 (780) 428-9482",
      PostalCode: "T5K 2N1",
      ReportsTo: null,
      State: "AB",
      Title: "General Manager",
    },
    table: "employees",
    type: "GetRow",
  },
}
`;

snapshot[`get single row with selected columns 1`] = `
{
  data: {
    request_id: "",
    row: {
      FirstName: "Andrew",
      LastName: "Adams",
      Title: "General Manager",
    },
    table: "employees",
    type: "GetRow",
  },
}
`;

snapshot[`get single row from a table that does not exist 1`] = `
{
  error: {
    table: "cats",
    type: "TableNotFound",
  },
}
`;

snapshot[`get single row from a with a non existent key 1`] = `
{
  error: {
    type: "RowNotFound",
  },
}
`;
